refactor: replace deprecated Integer constructors with valueOf method; update .gitignore for PS1 files